nodedata/fibonacideployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rubis-deployment
spec:
  selector:
    matchLabels:
      app: rubis-pod
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: rubis-pod
    spec:
      containers:
      - name: rubis-pod
        image: mufengziyu/fibonacci:0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "300Mi"
            cpu: "1"
          requests:
            memory: "200Mi"
            cpu: "0.9"
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/tomcat/conf/server.xml
          subPath: server.xml
      nodeSelector:
        nodename: rubis
      volumes:
      - name: config-volume
        configMap:
         name: special-config-tomcat
